sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:17: error: type mismatch;
 found   : Unit
 required: Boolean
   if(!swapped)
   ^